# ibus-anya

./: .gitignore  README.md  configure.ac
config/: Makefile.am
config/anya/: default.xml
config/gschema/: Makefile.am  org.freedesktop.ibus.engine.anya.gschema.xml
config/ibusengines/: Makefile.am  anya.xml  anya.xml.in  egoisticlily.xml  egoisticlily.xml.in
src/: anyaadaptor.py  anyaprefs.py  engine.py.in  factory.py.in  ibus-engine-anya.in  main.py.in  prefs.py
